[package]
name = "flash-lcr-p1"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Flash firmware to the Fnirsi LCR-P1 LCR meter over USB serial (CH340/CH341)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/threebytesfull/flash-lcr-p1"
homepage = "https://github.com/threebytesfull/flash-lcr-p1"
readme = "README.md"
keywords = ["firmware", "lcr", "fnirsi", "serial", "embedded"]
categories = ["command-line-utilities"]
exclude = [".github/"]

[lints.clippy]
pedantic = "deny"

[dependencies]
serialport = "4.8.1"
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"
indicatif = "0.18.4"
zip = { version = "8.1.0", optional = true }

[dev-dependencies]
tempfile = "3.26.0"

[features]
default = ["zip"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
